--- a/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
@@ -21,7 +21,7 @@ num_epochs = 1
 val_step = 1
 ckpt_step = 1000
 num_workers = 16
-device = "cuda"
+
 root_results_dir = "./tests/data_for_tests/generated/results/train/audio_cbin_annot_notmat/ConvEncoderUMAP"
 
 [vak.train.model.ConvEncoderUMAP.network]
@@ -35,3 +35,7 @@ n_components = 2
 
 [vak.train.model.ConvEncoderUMAP.optimizer]
 lr = 0.001
+
+[vak.train.trainer]
+accelerator = "gpu"
+devices = [0]
