--- a/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
@@ -27,7 +27,7 @@ val_step = 50
 ckpt_step = 200
 patience = 4
 num_workers = 16
-device = "cuda"
+
 root_results_dir = "./tests/data_for_tests/generated/results/learncurve/audio_cbin_annot_notmat/TweetyNet"
 
 [vak.learncurve.post_tfm_kwargs]
@@ -50,3 +50,7 @@ hidden_size = 32
 
 [vak.learncurve.model.TweetyNet.optimizer]
 lr = 0.001
+
+[vak.learncurve.trainer]
+accelerator = "gpu"
+devices = [0]
