--- a/tests/data_for_tests/configs/TweetyNet_train_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_train_audio_cbin_annot_notmat.toml
@@ -25,7 +25,7 @@ val_step = 50
 ckpt_step = 200
 patience = 4
 num_workers = 16
-device = "cuda"
+
 root_results_dir = "./tests/data_for_tests/generated/results/train/audio_cbin_annot_notmat/TweetyNet"
 
 [vak.train.dataset]
@@ -44,3 +44,7 @@ hidden_size = 32
 
 [vak.train.model.TweetyNet.optimizer]
 lr = 0.001
+
+[vak.train.trainer]
+accelerator = "gpu"
+devices = [0]
