Rename 'normalize_spectrogram' -> 'standardize_frames'

--- a/src/vak/config/valid-version-1.1.toml
+++ b/src/vak/config/valid-version-1.1.toml
@@ -38,7 +38,7 @@ root_results_dir = './tests/test_data/results/train'
 num_workers = 4
 batch_size = 11
 num_epochs = 2
-normalize_spectrograms = true
+standardize_frames = true
 shuffle = true
 val_step = 1
 ckpt_step = 1
@@ -83,7 +83,7 @@ devices = [0]
 root_results_dir = './tests/test_data/results/learncurve'
 batch_size = 11
 num_epochs = 2
-normalize_spectrograms = true
+standardize_frames = true
 shuffle = true
 val_step = 1
 ckpt_step = 1
