--- a/tests/data_for_tests/configs/TweetyNet_train_continue_spect_mat_annot_yarden.toml
+++ b/tests/data_for_tests/configs/TweetyNet_train_continue_spect_mat_annot_yarden.toml
@@ -18,7 +18,7 @@ thresh = 6.25
 transform_type = "log_spect"
 
 [vak.train]
-normalize_spectrograms = false
+standardize_frames = false
 batch_size = 11
 num_epochs = 2
 val_step = 50
