--- a/tests/data_for_tests/configs/invalid_key_config.toml
+++ b/tests/data_for_tests/configs/invalid_key_config.toml
@@ -23,7 +23,7 @@ transform_type = 'log_spect'
 
 [vak.train]
 root_results_dir = '/home/user/data/subdir/'
-normalize_spectrograms = true
+standardize_frames = true
 num_epochs = 2
 batch_size = 11
 val_error_step = 1
