--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "vak"
-description = "a neural network toolbox for animal vocalizations and bioacoustics"
+description = "A neural network framework for researchers studying acoustic communication"
 version = "1.0.0.post1"
 authors = [
     {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
