--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -4,13 +4,15 @@ on:
     branches:
       - main
   pull_request:
+  schedule:
+      - cron: "0 0 * * 1"
 
 jobs:
   ci:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", 3.11, 3.12]
+        python-version: [3.11, 3.12, 3.13]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -23,5 +25,7 @@ jobs:
           nox -s test-data-download-source
           nox -s test-data-download-generated-ci
           nox -s coverage --verbose
-      - name: upload code coverage
-        uses: codecov/codecov-action@v3
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
