--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "vak"
 description = "A neural network framework for researchers studying acoustic communication"
-version = "1.0.4"
+version = "1.0.4.post1"
 authors = [
     {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
 ]
